2020-08-31 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix potential precision loss when performing multiple consecutive unit conversions
	* Option to remember window position

2020-08-30 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix unit conversion search entry losing focus
	* Clear search entries when entering character with entry not in focus

2020-08-29 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add "Copy result to clipboard" to Gnome shell search provider
	* Increase default precision to 10

2020-08-27 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Reduce time before GUI appears on load

2020-08-06 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add composite units to completion
	* Add category to SI unit titles in completion
	* Group hexadecimal digits

2020-08-03 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Show error message when gnuplot is not installed when the user tries to open the plot dialog, instead of disabling the menu item

2020-08-02 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix display of negative number with scientific notation

2020-07-26 VicSanRoPe <?>

	* Spanish translation

2020-07-23 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Show bit position for binary number that does not fit in window

2020-07-22 Hanna Knutsson <hanna.knutsson@protonmail.com>
	
	* Split long numerical results in two lines
	* Copy the result when clicking on it

2020-07-21 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Improve text layout (do not cut off part of y) in result view
	* Do not automatically open any dialogs (for matrices and information messages) during calculate-as-you-type

2020-07-15 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Auto completion for objects and properites in data set functions
	* Fixes for vectors in insert function dialog
	* Improve spacing with numbers in result display

2020-07-12 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add example expressions appendix to manual