@@ -1,3 +1,10 @@
+2020-09-04 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Insert operator symbols on appropriate key press in plot, unit, and set unknown expression entries
+	* Do not list objects in category with name that is a substring of another category
+	* Fix continuous parsing of "to"-expression with variable without unit
+	* Do not italicize %, ‰, and ‱
+
 2020-08-31 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Fix potential precision loss when performing multiple consecutive unit conversions
